--- a/.github/workflows/comment-deploy.yaml
+++ b/.github/workflows/comment-deploy.yaml
@@ -16,8 +16,8 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: cd auth && docker build -t uzukwujp/auth:latest .
-      - run: docker push uzukwujp/auth:latest
+      - run: cd auth && docker build -t uzukwujp/comment:latest .
+      - run: docker push uzukwujp/comment:latest
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
