--- a/.github/workflows/query-deploy.yaml
+++ b/.github/workflows/query-deploy.yaml
@@ -16,10 +16,10 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: cd auth && docker build -t cygnetops/auth .
-      - run: docker push cygnetops/auth
+      - run: cd auth && docker build -t uzukwujp/query:latest .
+      - run: docker push uzukwujp/query:latest
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - run: doctl kubernetes cluster kubeconfig save ticketing
+      - run: doctl kubernetes cluster kubeconfig save k8s-1-21-9-do-0-lon1-1646051938262
       - run: kubectl rollout restart deployment query-depl
