added deploy-manifest file

--- a/.github/workflows/auth-deploy.yaml
+++ b/.github/workflows/auth-deploy.yaml
@@ -3,9 +3,9 @@ name: deploy-auth
 on:
   push:
     branches:
-      - main
+      - master
     paths:
-      - 'auth/**'
+      - "auth/**"
 
 jobs:
   build:
