--- a/.github/workflows/moderation-deploy.yaml
+++ b/.github/workflows/moderation-deploy.yaml
@@ -3,9 +3,9 @@ name: deploy-moderation
 on:
   push:
     branches:
-      - main
+      - master
     paths:
-      - 'moderation/**'
+      - "moderation/**"
 
 jobs:
   build:
