--- a/.github/workflows/post-deploy.yaml
+++ b/.github/workflows/post-deploy.yaml
@@ -3,9 +3,9 @@ name: deploy-post
 on:
   push:
     branches:
-      - main
+      - master
     paths:
-      - 'post/**'
+      - "post/**"
 
 jobs:
   build:
