--- a/.github/workflows/post-deploy.yaml
+++ b/.github/workflows/post-deploy.yaml
@@ -21,5 +21,5 @@ jobs:
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - run: doctl kubernetes cluster kubeconfig save k8s-1-21-9-do-0-lon1-1646051938262
+      - run: doctl kubernetes cluster kubeconfig save prod
       - run: kubectl rollout restart deployment post-depl
