--- a/infra/k8s-prod/ingress-srv-depl.yaml
+++ b/infra/k8s-prod/ingress-srv-depl.yaml
@@ -1,28 +1,40 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-service
+  name: blogs-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
-    - host: blog.dev
+    - host: www.blogsapi.xyz
       http:
         paths:
           - path: /api/users/?(.*)
+            pathType: Prefix
             backend:
-              serviceName: auth-srv
-              servicePort: 3000
+              service:
+                name: auth-srv
+                port:
+                  number: 3000
           - path: /api/comments/?(.*)
+            pathType: Prefix
             backend:
-              serviceName: comment-srv
-              servicePort: 4000
+              service:
+                name: comment-srv
+                port:
+                  number: 4000
           - path: /api/posts/?(.*)
+            pathType: Prefix
             backend:
-              serviceName: post-srv
-              servicePort: 5000
-          - path: /api/querys/?(.*)
+              service:
+                name: post-srv
+                port:
+                  number: 5000
+          - path: /api/blogs/?(.*)
+            pathType: Prefix
             backend:
-              serviceName: query-srv
-              servicePort: 6000
+              service:
+                name: query-srv
+                port:
+                  number: 6000
